--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "helmet": "^3.18.0",
-    "mongoose": "^5.5.6"
+    "mongoose": "^5.5.14",
+    "nodemon": "^1.19.1"
   }
 }
